@@ -17,6 +17,7 @@ Overview of changes in lightdm 0.2.0
     * Add introspection.m4 to the source tree
     * Support using no greeter user in lightdm.conf
     * Flush writes to main log file
+    * Allow non-privilidged user to write greeter log file in /var
 
 Overview of changes in lightdm 0.1.2
 
